# RubiksCubeSolver

./: CMakeLists.txt  main.cpp
.github/workflows/: qodana_code_quality.yml
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
Model/PatternDatabase/: PatternDatabase.h
Pattern Databases/: CornerDBMaker.cpp  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.h  PatternDatabase.cpp  PermutationIndexer.h  math.h
PatternDatabases/: CornerPatternDatabase.h  NibbleArray.cpp  PatternDatabase.cpp  PatternDatabase.h  math.cpp
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
